Revert "[HOTFIX]: clientID 목록 추가"